Changelog
=========

8.4.dev0 - (unreleased)
-----------------------

8.3 - (2016-08-29)
------------------
* Change: Set gmap key
  [claytonc]

8.2 - (2015-10-05)
------------------
* Change: check if DavizEdit.Events exists before overriding it withing js files
  in case DavizEdit isn't found and is constructed
  [ichimdav refs #27220]

8.1 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

8.0 - (2015-05-05)
------------------
* Bug fix: check if tab api is available before attempting to click on first
  chart tab. This way we avoid a js error when no charts are added.
  [ichimdav refs #22901]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.exhibit
* Cleanup: Removed fallback images from ZODB
  [voineali refs #24901]

7.9 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins builds install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins builds install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

7.8 - (2014-12-23)
------------------
* Bug fix: Fixed exhibit views to work with Chameleon
  [voineali refs #22228]

7.7 - (2014-06-10)
------------------
* Feature: Updated tutorial link for exhibit edit page
  [szabozo0 refs #18400]

7.6 - (2014-03-10)
------------------
* Change: Link video tutorials within documentation
  [avoinea]

7.5 - (2014-02-03)
------------------
* Bug fix: Workaround for exhibit loosing the hashbang when applying filter
  [olimpiurob #17233]
* Bug fix: Fixed exhibit 2.2.0 js syntax error manifesting in IE8
  [olimpiurob #17233]

7.4 - (2014-01-23)
------------------
* Change: Rerelease broken egg
  [ghicaale refs #17959]

7.3 - (2014-01-22)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]